[package]
name = "freya-engine"
description = "Abstract Freya's graphics APIs"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../readme.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "graphics"]
categories = ["gui"]

[package.metadata.docs.rs]
features = ["mocked-engine"]

[features]
mocked-engine = []
skia-engine = ["dep:skia-safe"]

[dependencies]
bitflags = "2.4.1"
skia-safe = { workspace = true, optional = true }
glutin = { workspace = true }

